--- a/index.html
+++ b/index.html
@@ -8,18 +8,12 @@
   </head>
   <body>
     <div class="Main">
-      <img
-        src="img/mountain_lake_landscape_nature-wallpaper-3840x2160.jpg
-      "
-        alt="image"
-      />
       <div class="form">
-        <input id="userName" type="text" placeholder="User Name :" />
-        <h2>your user name incorrect</h2>
-        <input id="gmail" type="text" placeholder="Gmail :" />
-        <h2>your Gmail incorrect</h2>
+        <h1>Log in</h1>
+        <input id="userName" type="text" placeholder="userName :" />
+        <h2 id="messageEmail"></h2>
         <input id="password" type="password" placeholder="Password :" />
-        <h2>your Password incorrect</h2>
+        <h2 id="messagePassword"></h2>
         <button id="btn">login</button>
       </div>
     </div>
